[tool.poetry]
name = "cpd"
version = "0.1.0"
description = ""
authors = ["Ervin Canigur <ervin@canigur.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.1.1"
black = "^23.1.0"
mypy = "^1.0.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
