[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ervin Canigur <ervin@canigur.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
sqlalchemy = "^2.0.4"
alembic = "^1.10.1"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
